--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,16 @@
     font-family: 'Press Start 2P', cursive;
 }
 
+body {
+    background-color: #103F79;
+}
+
+.screen {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .container {
     position: relative;
     display: inline-block;
@@ -80,4 +90,43 @@
     right: 0;
     top: 0;
     bottom: 0;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    color: #F3B229;
+    font-size: 0.45rem;
+    padding: 10px;
+    width: 100vw;
+}
+
+.author {
+    position: relative;
+    font-weight: 700;
+}
+
+a {
+    color: #F3B229;
+    text-decoration: none;
+}
+
+.heart {
+    height: 0.8rem;
+    width: 0.8rem;
+    margin-bottom: -0.1rem;
+    margin-left: 0.3rem;
+    margin-right: 0.3rem;
+}
+
+.chimp {
+    height: 1.1rem;
+    width: 1.1rem;
+    margin-bottom: -4px;
+    margin-left: 0.2rem;
+    margin-right: 0.2rem;
 }
